# WorshipPads

./: .gitattributes  .gitignore  NOTICE.md  README.md  index.html  package-lock.json  package.json  remote.html  setup.ps1  tsconfig.node.json  vite.config.ts  vite.remote.config.ts
.github/workflows/: release.yml
scripts/: render-logo.mjs  sync-cargo-version.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: remote.html
src-tauri/capabilities/: default.json
src-tauri/examples/: audio_smoke.rs  cue_smoke.rs  scan_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  library.rs  logging.rs  main.rs  model.rs  server.rs  state.rs
src-tauri/src/audio/: decode.rs  engine.rs  mod.rs
src-tauri/src/cues/: mod.rs  sapi.rs  synth.rs
src/components/: ClickPage.tsx  ConnectModal.tsx  CuesPage.tsx  LibraryPage.tsx  NavItem.tsx  PadsPage.tsx  RoutingPicker.tsx  SettingsPage.tsx  ui.tsx
src/lib/: baseName.ts  ipc.ts  mock.ts
src/remote/: App.tsx  api.ts  styles.css
src/remote/components/: ClickTab.tsx  CuesTab.tsx  Meter.tsx  PadsTab.tsx  icons.tsx
src/remote/hooks/: useRemoteState.ts  useServerClockOffset.ts
src/shared/: types.ts  useHoldRepeat.ts  useTapTempo.ts
