[package]
name = "stagepal"
version = "0.1.0"
description = "StagePal"
authors = ["gladsonsam"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stagepal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Default ON locally so `cargo build` / `tauri dev` pick up ASIO without extra
# flags. Disable in CI with `--no-default-features` when the SDK + libclang
# aren't present (the build script for `asio-sys` would otherwise fail).
default = ["asio"]
asio = ["cpal/asio"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio engine. ASIO support is gated behind the pads-level `asio` feature
# (default ON for local builds). CI / Release jobs that don't have the Steinberg
# ASIO SDK + libclang installed should build with `--no-default-features`.
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "isomp4", "aac", "flac", "ogg", "vorbis", "wav", "pcm"] }
rubato = "0.15"
rtrb = "0.3"
crossbeam-channel = "0.5"

# Async runtime + state broadcast
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "macros", "io-util", "time"] }

# Phone-remote web server + service discovery
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
mdns-sd = "0.11"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

